--- a/earlycare.html
+++ b/earlycare.html
@@ -21,7 +21,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">Project</a>
 								<ul>
 									<li><a href="binuschat.html">Binus Chat</a></li>
 									<li><a href="researchdatamining.html">Research Data Mining</a></li>
