--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</header>
 
 			<!-- Banner -->
-			<body class="landing">
+			<body class="is-preload landing">
 				<section id="banner">
 					<video autoplay loop muted id="video-bg">
 						<source src="images/gradient4.mp4" type="video/mp4">
