--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<header id="header">
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="#">Home</a></li>
 							<li>
 								<a href="#">Project</a>
 								<ul>
