--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
 			<!-- Banner -->
 			<body class="is-preload landing">
 				<section id="banner">
-					<video autoplay loop muted id="video-bg">
-						<source src="images/gradient4.mp4" type="video/mp4">
-					  </video>
+					<div class="gradient-background"></div>
 					<div class="content">
 						<header>
 							<h2>Hi, I'm <span class="myname">Nicholas Christopher</span></h2>
