--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<p>Bina Nusantara University student majoring in Computer Science<br />
 								 who has an interest in Database Technology, especially Data Scientists</p>
 						</header>
-						<span class="image"><img src="images/miko_0.25x.png" alt="" /></span>
+						<span class="image"><img src="images/miko.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
