--- a/researchdatamining.html
+++ b/researchdatamining.html
@@ -20,7 +20,7 @@
 					<!-- <h1 id="logo"><a href="index.html">Landed</a></h1> -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="https://ncthetruth.github.io/">Home</a></li>
 							<li>
 								<a href="#">Project</a>
 								<ul>
