--- a/binuschat.html
+++ b/binuschat.html
@@ -23,9 +23,9 @@
 							<li>
 								<a href="#">Project</a>
 								<ul>
-									<li><a href="binuschat.html">Binus Chat</a></li>
-									<li><a href="researchdatamining.html">Research Data Mining</a></li>
-									<li><a href="earlycare.html">EarlyCare</a></li>
+									<li><a href="#">Binus Chat</a></li>
+									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
+									<li><a href="https://ncthetruth.github.io/earlycare">EarlyCare</a></li>
 								</ul>
 							</li>
 							<li><a href="index.html#one" class="scrolly">About</a></li>
