--- a/earlycare.html
+++ b/earlycare.html
@@ -23,13 +23,13 @@
 							<li>
 								<a href="#">Project</a>
 								<ul>
-									<li><a href="binuschat.html">Binus Chat</a></li>
-									<li><a href="researchdatamining.html">Research Data Mining</a></li>
-									<li><a href="earlycare.html">EarlyCare</a></li>
+									<li><a href="https://ncthetruth.github.io/binuschat">Binus Chat</a></li>
+									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
+									<li><a href="#">EarlyCare</a></li>
 								</ul>
 							</li>
-							<li><a href="index.html#one" class="scrolly">About</a></li>
-							<li><a href="index.html#four">Motivation</a></li>
+							<li><a href="https://ncthetruth.github.io/#one">About</a></li>
+							<li><a href="https://ncthetruth.github.io/#four">Motivation</a></li>
 						</ul>
 					</nav>
 				</header>
