--- a/binuschat.html
+++ b/binuschat.html
@@ -28,7 +28,7 @@
 									<li><a href="https://ncthetruth.github.io/earlycare">EarlyCare</a></li>
 								</ul>
 							</li>
-							<li><a href="index.html#one" class="scrolly">About</a></li>
+							<li><a href="index.html#one">About</a></li>
 							<li><a href="index.html#four">Motivation</a></li>
 						</ul>
 					</nav>
