--- a/binuschat.html
+++ b/binuschat.html
@@ -28,8 +28,8 @@
 									<li><a href="https://ncthetruth.github.io/earlycare">EarlyCare</a></li>
 								</ul>
 							</li>
-							<li><a href="index.html#one">About</a></li>
-							<li><a href="index.html#four">Motivation</a></li>
+							<li><a href="https://ncthetruth.github.io/#one">About</a></li>
+							<li><a href="https://ncthetruth.github.io/#four">Motivation</a></li>
 						</ul>
 					</nav>
 				</header>
