--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/banner.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/bannerncthetruth.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
