--- a/researchdatamining.html
+++ b/researchdatamining.html
@@ -17,7 +17,6 @@
 
 			<!-- Header -->
 				<header id="header">
-					<!-- <h1 id="logo"><a href="index.html">Landed</a></h1> -->
 					<nav id="nav">
 						<ul>
 							<li><a href="https://ncthetruth.github.io/">Home</a></li>
@@ -109,7 +108,8 @@
 						<li><a href="https://github.com/ncthetruth" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+<!-- 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+						<li>ncthetruth.github.io</li>
 					</ul>
 				</footer>
 
