--- a/earlycare.html
+++ b/earlycare.html
@@ -21,6 +21,9 @@
 									<li><a href="https://ncthetruth.github.io/binuschat">Binus Chat</a></li>
 									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
 									<li><a href="#">EarlyCare</a></li>
+									<li><a href="https://ncthetruth.github.io/binuschat">Soon (Binus Chat - Mobile)</a></li>
+									<li><a href="https://ncthetruth.github.io">Soon (Tanaka Guitar)</a></li>
+									<li><a href="https://ncthetruth.github.io">Soon(GiveMeSomeCredit)</a></li>
 								</ul>
 							</li>
 							<li><a href="https://ncthetruth.github.io/#one">About</a></li>
