--- a/researchdatamining.html
+++ b/researchdatamining.html
@@ -26,6 +26,9 @@
 									<li><a href="https://ncthetruth.github.io/binuschat">Binus Chat</a></li>
 									<li><a href="#">Research Data Mining</a></li>
 									<li><a href="https://ncthetruth.github.io/earlycare">EarlyCare</a></li>
+									<li><a href="https://ncthetruth.github.io/binuschat">Soon (Binus Chat - Mobile)</a></li>
+									<li><a href="https://ncthetruth.github.io">Soon (Tanaka Guitar)</a></li>
+									<li><a href="https://ncthetruth.github.io">Soon(GiveMeSomeCredit)</a></li>
 								</ul>
 							</li>
 							<li><a href="https://ncthetruth.github.io/#one">About</a></li>
