--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<header>
 							<h2>Hi, I'm <span class="myname">Nicholas Christopher</span></h2>
 							<p>Bina Nusantara University student majoring in Computer Science<br />
-								 who has an interest in Database Technology, especially Data Science and Web Development</p>
+								 who has an interest in Data Science and Web Development</p>
 						</header>
 						<span class="image"><img src="images/miko.png" alt="" /></span>
 					</div>
