--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
 							<li>
 								<a href="#">Project</a>
 								<ul>
-									<li><a href="https://ncthetruth.github.io/binuschat">Binus Chat</a></li>
+									<li>
+										<a href="#">Binus Chat</a>
+										<ul>
+											<li><a href="https://ncthetruth.github.io/binuschat">Binus Chat - Web</a></li>
+											<li><a href="https://ncthetruth.github.io/binuschat">Soon (Binus Chat - Mobile)</a></li>
+										</ul>
 									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
-									<li><a href="https://ncthetruth.github.io/earlycare">EarlyCare</a></li>
-									<li><a href="https://ncthetruth.github.io/binuschat">Soon (Binus Chat - Mobile)</a></li>
+									<li><a href="https://ncthetruth.github.io/earlycare">Early Care</a></li>
+									<li><a href="https://ncthetruth.github.io">Soon (Virtual Nursing Assistant)</a></li>
 									<li><a href="https://ncthetruth.github.io">Soon (Tanaka Guitar)</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon(GiveMeSomeCredit)</a></li>
+									<li><a href="https://ncthetruth.github.io">Soon (GiveMeSomeCredit)</a></li>
 								</ul>
 							</li>
 							<li><a href="#one" class="scrolly">About</a></li>
@@ -90,7 +95,7 @@
 							staff, and faculty members while preserving the privacy of each individual. Binus Chat is a web-based 
 							platform, making it user-friendly and accessible.</p>
 						<ul class="actions">
-							<li><a href="binuschat.html" class="button">Learn More</a></li>
+							<li><a href="https://ncthetruth.github.io/binuschat" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -109,14 +114,45 @@
 							to combat fraud. This research journal focuses on developing an efficient algorithm 
 							for credit card fraud detection.</p>
 						<ul class="actions">
-							<li><a href="researchdatamining.html" class="button">Learn More</a></li>
+							<li><a href="https://ncthetruth.github.io/researchdatamining" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
+				<!-- Four -->
+				<section id="four" class="spotlight style1 bottom">
+					<span class="image fit main"><img src="images/earlycarebanner.png" alt="" /></span>
+					<div class="content">
+						<div class="container">
+							<div class="row">
+								<div class="col-4 col-12-medium">
+									<header>
+										<h2 class="bld">More Project</h2>
+										<p>Many projects are not displayed and will be displayed here as soon as possible.</p>
+									</header>
+								</div>
+								<div class="col-4 col-12-medium">
+									<p>Many projects have not been displayed yet due to the constraints of a demanding academic 
+										schedule and a substantial workload of projects that need to be completed. I will do my 
+										best to gradually showcase all of them. Thank you for your understanding.</p>
+								</div>
+								<div class="col-4 col-12-medium">
+									<p>Here are some other projects. If you'd like to view more and upcoming projects, 
+										you can check the navigation bar.</p>
+										<ul class="actions">
+											<li><a href="https://ncthetruth.github.io/earlycare" class="button">Learn More</a></li>
+										</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+					<a href="#five" class="goto-next scrolly">Next</a>
+				</section>
+
+
+			<!-- Five -->
+				<section id="five" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
 							<h2 class="bld">Motivation</h2>
