--- a/researchdatamining.html
+++ b/researchdatamining.html
@@ -23,12 +23,17 @@
 							<li>
 								<a href="#">Project</a>
 								<ul>
-									<li><a href="https://ncthetruth.github.io/binuschat">Binus Chat</a></li>
+									<li>
+										<a href="#">Binus Chat</a>
+										<ul>
+											<li><a href="https://ncthetruth.github.io/binuschat">Binus Chat - Web</a></li>
+											<li><a href="https://ncthetruth.github.io/binuschat">Soon (Binus Chat - Mobile)</a></li>
+										</ul>
 									<li><a href="#">Research Data Mining</a></li>
-									<li><a href="https://ncthetruth.github.io/earlycare">EarlyCare</a></li>
-									<li><a href="https://ncthetruth.github.io/binuschat">Soon (Binus Chat - Mobile)</a></li>
+									<li><a href="https://ncthetruth.github.io/earlycare">Early Care</a></li>
+									<li><a href="https://ncthetruth.github.io">Soon (Virtual Nursing Assistant)</a></li>
 									<li><a href="https://ncthetruth.github.io">Soon (Tanaka Guitar)</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon(GiveMeSomeCredit)</a></li>
+									<li><a href="https://ncthetruth.github.io">Soon (GiveMeSomeCredit)</a></li>
 								</ul>
 							</li>
 							<li><a href="https://ncthetruth.github.io/#one">About</a></li>
