--- a/binuschat.html
+++ b/binuschat.html
@@ -21,8 +21,8 @@
 									<li>
 										<a href="#">Binus Chat</a>
 										<ul>
-											<li><a href="#">Binus Chat - Web</a></li>
-											<li><a href="#">Soon (Binus Chat - Mobile)</a></li>
+											<li><a href="https://ncthetruth.github.io/binuschat">Binus Chat - Web</a></li>
+											<li><a href="https://ncthetruth.github.io/binuschat">Soon (Binus Chat - Mobile)</a></li>
 										</ul>
 									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
 									<li><a href="https://ncthetruth.github.io/earlycare">Early Care</a></li>
