--- a/binuschat.html
+++ b/binuschat.html
@@ -32,7 +32,14 @@
 								</ul>
 							</li>
 							<li><a href="https://ncthetruth.github.io/#one">About</a></li>
-							<li><a href="https://ncthetruth.github.io/#four">Motivation</a></li>
+							<li><a href="#">Experience</a>
+								<ul>
+									<li><a href="https://ncthetruth.github.io/himti">HIMTI</a></li>
+									<li><a href="#">Ureeka Binus</a></li>
+									<li><a href="https://ncthetruth.github.io/graphicdesign">Graphic Design</a></li>
+									<li><a href="https://ncthetruth.github.io/otherexperience">Other Experience</a></li>
+								</ul>
+							</li>
 						</ul>
 					</nav>
 				</header>
@@ -69,7 +76,7 @@
 										<section>
 											<a href="#" class="image fit"><img src="images/githubrepo.png" alt="" /></a>
 											<h3>Code Repository</h3>
-											<p>This repository serves as a documentation and storage space 
+											<p class="pmid">This repository serves as a documentation and storage space 
 												for all Bina Nusantara Chat projects, accessible to anyone 
 												for learning purposes.</p>
 											<footer>
@@ -86,8 +93,9 @@
 								<!-- Content -->
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/Login1.png" alt="" /></a>
+									<div class="pmid">
 										<h3>Why was Binus Chat created?</h3>
-										<p class="pmid">We developed the Binus Chat web app with the aim of simplifying 
+										<p>We developed the Binus Chat web app with the aim of simplifying 
 											the process of finding contacts for fellow students, staff, or professors 
 											within the university community. This allows for faster access to contacts 
 											while preserving privacy, as users do not need to share personal contact 
@@ -101,6 +109,7 @@
 											our choice for the database is MySQL. We selected these technologies because they are 
 											user-friendly and easily implementable.</p>
 											<h3>Who is behind Binus Chat?</h3>
+										</div>
 										<ul>
 											<li>Nicholas Christopher</li>
 											<li>David Samuel</li>
