--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Early Care</title>
+		<title>Graphic Design</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +25,7 @@
 											<li><a href="https://ncthetruth.github.io/binuschat">Soon (Binus Chat - Mobile)</a></li>
 										</ul>
 									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
-									<li><a href="#">Early Care</a></li>
+									<li><a href="https://ncthetruth.github.io/earlycare">Early Care</a></li>
 									<li><a href="https://ncthetruth.github.io">Soon (Virtual Nursing Assistant)</a></li>
 									<li><a href="https://ncthetruth.github.io">Soon (Tanaka Guitar)</a></li>
 									<li><a href="https://ncthetruth.github.io">Soon (GiveMeSomeCredit)</a></li>
@@ -35,8 +35,8 @@
 							<li><a href="#">Experience</a>
 								<ul>
 									<li><a href="https://ncthetruth.github.io/himti">HIMTI</a></li>
-									<li><a href="#">Ureeka Binus</a></li>
-									<li><a href="https://ncthetruth.github.io/graphicdesign">Graphic Design</a></li>
+									<li><a href="https://ncthetruth.github.io/ureekabinus">Ureeka Binus</a></li>
+									<li><a href="#">Graphic Design</a></li>
 									<li><a href="https://ncthetruth.github.io/otherexperience">Other Experience</a></li>
 								</ul>
 							</li>
@@ -48,44 +48,41 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Early Care</h2>
-							<p>Company Profile and E-commerce Website for Early Care</p>
+							<h2 class="bld">Graphic Design</h2>
+							<p>Freelancing as a Graphic Designer</p>
 						</header>
-						<div class="row gtr-150">
-							<div class="col-8 col-12-medium">
 
-								<!-- Content -->
-									<section id="content">
-										<a href="#" class="image fit"><img src="images/earlycarebanner.png" alt="" /></a>
-									<div class="pmid">
-										<h3>What is Early Care ?</h3>
-										<p>EarlyCare is a beauty company specializing in the production of facial soaps for children, teenagers, and adults. Our product, Early Care Gentle Kids and Teens Facial Foam, is specifically formulated for individuals with sensitive skin. It is free from PARABENS and SLS, contains no artificial fragrances, infused with natural oils, and maintains a balanced pH level. Additionally, it is registered with the Food and Drug Administration (BPOM).</p>
-										<h3>The technology behind the Early Care website</h3>
-										<p>The technology behind the Early Care Company Profile and E-commerce Website is WordPress, utilizing a MySQL database. The user interface is designed using Elementor. For the e-commerce section, WooCommerce is employed. To ensure the website is easily discoverable, EarlyCare relies on Yoast SEO.</p>
-										<h3>What am I working on ?</h3>
-										<p>Building the user interface for the Early Care Company Profile and E-commerce Website, setting up product listings on the website, optimizing the website for efficiency, and correcting errors from the previous design.</p>
-									</div>
-									</section>
-
-							</div>
-							<div class="col-4 col-12-medium">
-
-								<!-- Sidebar -->
-									<section id="sidebar">
-										<section>
-											<h3>EarlyCare Website</h3>
-											<a href="#" class="image fit"><img src="images/earlycareshop.png" alt="" /></a>
-											<p class="pmid">If there are any changes on the website, it means that the website has been updated by EarlyCare.</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="https://earlycareec.com/" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-										<hr />
-									</section>
-							</div>
-						</div>
+						<!-- Content -->
+							<section id="content">
+								<div class="pmid">
+								<p>Graphic design is the art and practice of creating communicative visuals using 
+									elements such as text, images, and graphics. Its aim is to convey a message or information in 
+									a visually appealing and effective manner. Graphic designers use various tools and technologies 
+									to create designs for print, digital media, or other forms of visual communication.</p>
+									<h3 class="bld">Activities Performed</h3>
+								<ul>
+									<li class="bld">Instagram Feed Design</li>
+									<p>Search for ideas, implement the rough results, and present them to the client. 
+										If the client approves of the conceptual idea, I proceed to the overall execution stage, 
+										presenting the complete design. If the client agrees, I provide all the necessary files. 
+										Typically, I design Instagram feeds for esports teams, beauty companies, boutiques, and other clients.</p>
+									<li class="bld">Logo Design</li>
+									<ul>Designing a logo for the purpose of establishing a corporate identity, aiming to be recognized 
+										as a professional company. This involves creating a visual symbol that not only reflects the essence 
+										and values of the company but also leaves a lasting and positive impression on the audience. The goal 
+										is to craft a distinctive and memorable logo that contributes to the overall professionalism and credibility 
+										of the business.</ul>
+									<li class="bld">Assisting in completing school assignments</li>
+									<ul>I assist in completing school assignments, specializing in tasks like designing posters, logos, photo 
+										retouching, and other related projects. My goal is to contribute creative and high-quality solutions 
+										to enhance the overall presentation and effectiveness of academic work.</ul>
+									<li class="bld">Other Work</li>
+									<ul>I also engage in video editing, visual effects, audio editing, and photography. My skills extend to 
+										enhancing multimedia content, ensuring a comprehensive and polished result across various creative tasks. 
+										By combining these capabilities, I strive to deliver well-rounded support for a diverse range of school 
+										projects and assignments.</ul>
+								</ul>
+							</section>
 					</div>
 				</div>
 
@@ -100,9 +97,8 @@
 						<li>ncthetruth.github.io</li>
 					</ul>
 				</footer>
-
 		</div>
-
+		
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -112,6 +108,5 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
