--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
 								</ul>
 							</li>
 							<li><a href="#one" class="scrolly">About</a></li>
-							<li><a href="#four" class="scrolly">Motivation</a></li>
+							<li><a href="#">Experience</a>
+								<ul>
+									<li><a href="https://ncthetruth.github.io/himti">HIMTI</a></li>
+									<li><a href="https://ncthetruth.github.io/ureekabinus">Ureeka Binus</a></li>
+									<li><a href="https://ncthetruth.github.io/graphicdesign">Graphic Design</a></li>
+									<li><a href="https://ncthetruth.github.io/otherexperience">Other Experience</a></li>
+								</ul>
+							</li>
 						</ul>
 					</nav>
 				</header>
@@ -71,7 +78,7 @@
 										design and web development. Additionally, I have a background in data mining.</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>I conducted a research project in data mining titled "Comparison of Data Mining Algorithm for
+									<p class="pmid">I conducted a research project in data mining titled "Comparison of Data Mining Algorithm for
 										Credit Card Fraud Detection" which can be viewed in the "Projects" section. 
 										I am currently focusing on enhancing my skills in ETL, Data Mining, and Data Analysis 
 										as I aspire to build a career in Data Science. This journey allows me to further develop 
@@ -91,7 +98,7 @@
 							<h2 class="bld">Project 1</h2>
 							<p>Binus Chat</p>
 						</header>
-						<p>Binus Chat is a project we have developed to facilitate communication among Binus University students, 
+						<p class="pmid">Binus Chat is a project we have developed to facilitate communication among Binus University students, 
 							staff, and faculty members while preserving the privacy of each individual. Binus Chat is a web-based 
 							platform, making it user-friendly and accessible.</p>
 						<ul class="actions">
@@ -109,7 +116,7 @@
 							<h2>Project 2</h2>
 							<p>Research Data Mining</p>
 						</header>
-						<p>During the pandemic, credit card usage increased rapidly, leading to a surge in 
+						<p class="pmid">During the pandemic, credit card usage increased rapidly, leading to a surge in 
 							credit card fraud threats. Through surveys and research, we have identified algorithms 
 							to combat fraud. This research journal focuses on developing an efficient algorithm 
 							for credit card fraud detection.</p>
@@ -133,12 +140,12 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Many projects have not been displayed yet due to the constraints of a demanding academic 
+									<p class="pmid">Many projects have not been displayed yet due to the constraints of a demanding academic 
 										schedule and a substantial workload of projects that need to be completed. I will do my 
 										best to gradually showcase all of them. Thank you for your understanding.</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Here are some other projects. If you'd like to view more and upcoming projects, 
+									<p class="pmid">Here are some other projects. If you'd like to view more and upcoming projects, 
 										you can check the navigation bar.</p>
 										<ul class="actions">
 											<li><a href="https://ncthetruth.github.io/earlycare" class="button">Learn More</a></li>
