--- a/researchdatamining.html
+++ b/researchdatamining.html
@@ -32,7 +32,14 @@
 								</ul>
 							</li>
 							<li><a href="https://ncthetruth.github.io/#one">About</a></li>
-							<li><a href="https://ncthetruth.github.io/#four">Motivation</a></li>
+							<li><a href="#">Experience</a>
+								<ul>
+									<li><a href="https://ncthetruth.github.io/himti">HIMTI</a></li>
+									<li><a href="https://ncthetruth.github.io/ureekabinus">Ureeka Binus</a></li>
+									<li><a href="https://ncthetruth.github.io/graphicdesign">Graphic Design</a></li>
+									<li><a href="https://ncthetruth.github.io/otherexperience">Other Experience</a></li>
+								</ul>
+							</li>
 						</ul>
 					</nav>
 				</header>
@@ -43,7 +50,7 @@
 						<header class="major">
 							<h2 class="bld">Comparison of Data Mining Algorithm for
 								Credit Card Fraud Detection</h2>
-							<p>During pandemic, credit card usage has increased
+							<p class="pmid">During pandemic, credit card usage has increased
 								rapidly compared to the year before. Credit cards fraud has been
 								a massive threat for their users. Through the survey and research,
 								some algorithms have been found to decrease the number of fraud
@@ -56,8 +63,9 @@
 						<!-- Content -->
 							<section id="content">
 								<a href="#" class="image fit"><img src="images/research.png" alt="" /></a>
+							<div class="pmid">
 								<h3>Why do we conduct research on this topic ?</h3>
-								<p class="pmid">In modern society, particularly in the banking sector, credit cards 
+								<p>In modern society, particularly in the banking sector, credit cards 
 									have become a widely used payment tool. They offer convenience for 
 									transactions but require users to pay their outstanding balances monthly. 
 									However, the convenience of credit cards is countered by the risk of credit 
@@ -92,6 +100,7 @@
 									fraud detection algorithms by leveraging ensemble classifier methods and developing more refined 
 									algorithms tailored to credit card fraud cases. The ultimate goal is to improve the overall 
 									efficiency of credit card fraud detection systems.</p>
+								</div>
 								<h3>Contribution</h3>
 								<ul>
 									<li>Nicholas Christopher</li>
