--- a/ureekabinus.html
+++ b/ureekabinus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Early Care</title>
+		<title>Ureeka Binus</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +25,7 @@
 											<li><a href="https://ncthetruth.github.io/binuschat">Soon (Binus Chat - Mobile)</a></li>
 										</ul>
 									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
-									<li><a href="#">Early Care</a></li>
+									<li><a href="https://ncthetruth.github.io/earlycare">Early Care</a></li>
 									<li><a href="https://ncthetruth.github.io">Soon (Virtual Nursing Assistant)</a></li>
 									<li><a href="https://ncthetruth.github.io">Soon (Tanaka Guitar)</a></li>
 									<li><a href="https://ncthetruth.github.io">Soon (GiveMeSomeCredit)</a></li>
@@ -48,44 +48,46 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Early Care</h2>
-							<p>Company Profile and E-commerce Website for Early Care</p>
+							<h2 class="bld">Ureeka Binus</h2>
+							<p>Software Developers Community at Binus University</p>
 						</header>
-						<div class="row gtr-150">
-							<div class="col-8 col-12-medium">
 
-								<!-- Content -->
-									<section id="content">
-										<a href="#" class="image fit"><img src="images/earlycarebanner.png" alt="" /></a>
-									<div class="pmid">
-										<h3>What is Early Care ?</h3>
-										<p>EarlyCare is a beauty company specializing in the production of facial soaps for children, teenagers, and adults. Our product, Early Care Gentle Kids and Teens Facial Foam, is specifically formulated for individuals with sensitive skin. It is free from PARABENS and SLS, contains no artificial fragrances, infused with natural oils, and maintains a balanced pH level. Additionally, it is registered with the Food and Drug Administration (BPOM).</p>
-										<h3>The technology behind the Early Care website</h3>
-										<p>The technology behind the Early Care Company Profile and E-commerce Website is WordPress, utilizing a MySQL database. The user interface is designed using Elementor. For the e-commerce section, WooCommerce is employed. To ensure the website is easily discoverable, EarlyCare relies on Yoast SEO.</p>
-										<h3>What am I working on ?</h3>
-										<p>Building the user interface for the Early Care Company Profile and E-commerce Website, setting up product listings on the website, optimizing the website for efficiency, and correcting errors from the previous design.</p>
-									</div>
-									</section>
-
-							</div>
-							<div class="col-4 col-12-medium">
-
-								<!-- Sidebar -->
-									<section id="sidebar">
-										<section>
-											<h3>EarlyCare Website</h3>
-											<a href="#" class="image fit"><img src="images/earlycareshop.png" alt="" /></a>
-											<p class="pmid">If there are any changes on the website, it means that the website has been updated by EarlyCare.</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="https://earlycareec.com/" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-										<hr />
-									</section>
-							</div>
-						</div>
+						<!-- Content -->
+							<section id="content">
+								<a href="#" class="image fit"><img src="images/bannerureeka.jpeg" alt="Banner Ureeka Binus" /></a>
+								<div class="pmid">
+								<p>Ureeka Binus University is a community in the field of software development that
+									aims to cultivate members interested in participating in software development competitions, 
+									UI/UX design, and more. In Ureeka, members share knowledge about the latest developments in 
+									the IT world, particularly in Software Development. Ureeka also organizes training sessions 
+									on software development, covering FrontEnd, BackEnd, and UI/UX, led by professionals, seniors, 
+									and experienced faculty members.</p>
+								<ul class="actions">
+									<li><a href="https://socs.binus.ac.id/ureeka/" class="button">Learn More</a></li>
+								</ul>
+									<h3 class="bld">Activities Performed</h3>
+								<ul>
+									<li class="bld">BackEnd Training</li>
+									<p>Backend training teaches how to build the system behind an application, covering 
+										aspects such as RestAPI, API Testing, SQL and NoSQL databases, Secure Code, and more. 
+										Technologies involved may include ExpressJS, MySQL, MongoDB, and many others.</p>
+									<li class="bld">Gemastik 2023</li>
+									<ul>Gemastik is an annual competition organized by the Indonesian government in the 
+										field of Computer Science. It involves participation from various universities across 
+										Indonesia, with teams competing in different categories relevant to the competition.</ul>
+									<ul>I participated in the competition in the field of UI/UX with two other team members. 
+										We had a concept related to the 17 Sustainable Development Goals (SDGs) to develop the design of 
+										an application. Unfortunately, we lost in the preliminary round, but this experience motivates us 
+										to continue learning and enhancing our skills. We are committed to not giving up and continuously 
+										improving ourselves.</ul>
+								</ul>
+								<h3 class="bld">What do i get ?</h3>
+								<p>I gained a lot of valuable experiences while participating in Ureeka, including thinking 
+									with out-of-the-box ideas, critical thinking, presentation skills as I had to explain concepts for what 
+									I was about to create, and learning about new technologies in the IT world. Additionally, this experience 
+									has helped me deepen my knowledge in the field of software development, especially in Backend.</p>
+								</div>
+							</section>
 					</div>
 				</div>
 
@@ -100,9 +102,8 @@
 						<li>ncthetruth.github.io</li>
 					</ul>
 				</footer>
-
 		</div>
-
+		
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -112,6 +113,5 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
