--- a/earlycare.html
+++ b/earlycare.html
@@ -35,7 +35,7 @@
 							<li><a href="#">Experience</a>
 								<ul>
 									<li><a href="https://ncthetruth.github.io/himti">HIMTI</a></li>
-									<li><a href="#">Ureeka Binus</a></li>
+									<li><a href="https://ncthetruth.github.io/ureekabinus">Ureeka Binus</a></li>
 									<li><a href="https://ncthetruth.github.io/graphicdesign">Graphic Design</a></li>
 									<li><a href="https://ncthetruth.github.io/otherexperience">Other Experience</a></li>
 								</ul>
