--- a/tanakaguitar.html
+++ b/tanakaguitar.html
@@ -48,7 +48,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Tanaka Guitar</h2>
+							<h2 class="bld">Tanaka Guitar</h2>
 							<p>Tanaka Guitar E-commerce Project</p>
 						</header>
 						<div class="row gtr-150">
