--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<div class="gradient-background"></div>
 					<div class="content">
 						<header>
-							<h2>Hi, I'm <span class="myname">Nicholas Christopher</span></h2>
+							<h2>Hi, I'm <span id="typed-text"></span><span id="cursor"></span></h2>
 							<p>Bina Nusantara University student majoring in Computer Science<br />
 								 who has an interest in Data Science and Web Development</p>
 						</header>
