--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<p>Bina Nusantara University student majoring in Computer Science<br />
 								 who has an interest in Data Science and Web Development</p>
 						</header>
-						<span class="image"><img src="images/ncthetruthProfile.jpg" alt="" /></span>
+						<span class="image"><img src="images/miko.webp" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
